@@ -1,3 +1,10 @@
+2009-04-30  Mike Krüger  <mkrueger@novell.com>
+
+	* Mono.TextEditor/Document.cs:
+	* Mono.TextEditor/TextEditorData.cs:
+	* Mono.TextEditor/DefaultEditActions.cs: Improved removing
+	  trailing whitespace feature.
+
 2009-04-30  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* Mono.TextEditor/CaretMoveActions.cs: Fix Mac Bug 497904 -
